fix: admin 페이지 API 엔드포인트 수정 및 stats 표시 기능 개선

--- a/public/admin.html
+++ b/public/admin.html
@@ -35,19 +35,19 @@
             <div class="stats-container">
                 <div class="stat-card">
                     <h2>등록된 코인</h2>
-                    <p class="stat-value" id="coin-count">3</p>
+                    <p class="stat-value" id="coin-count">0</p>
                 </div>
                 <div class="stat-card">
                     <h2>가입 회원수</h2>
-                    <p class="stat-value" id="user-count">42</p>
+                    <p class="stat-value" id="user-count">0</p>
                 </div>
                 <div class="stat-card">
                     <h2>거래량(24h)</h2>
-                    <p class="stat-value" id="trading-volume">0</p>
+                    <p class="stat-value" id="total-volume">0</p>
                 </div>
                 <div class="stat-card">
                     <h2>거래 건수(24h)</h2>
-                    <p class="stat-value" id="order-count">0</p>
+                    <p class="stat-value" id="transaction-count">0</p>
                 </div>
             </div>
         </div>
